<resources>
    <string name="main_fragment_title">Поиск дешевых\nавиабилетов</string>
    <string name="no_internet_error_text">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="duration_end">ч в пути</string>
    <string name="departure_hint">Откуда - Москва</string>
    <string name="arrival_hint">Куда - Турция</string>
    <string name="music_fly">Музыкально отлететь</string>
    <string name="difficult_route">Сложный\nмаршрут</string>
    <string name="anywhere">Куда угодно</string>
    <string name="weekends">Выходные</string>
    <string name="hot_tickets">Горячие\nбилеты</string>
    <string name="istanbul">Стамбул</string>
    <string name="phuket">Пхукет</string>
    <string name="sochi">Сочи</string>
    <string name="popular_destination">Популярное направление</string>
    <string name="fragment_placeholder">Этот экран еще в разработке</string>
    <string name="back">обратно</string>
    <string name="type_text">1, эконом</string>
    <string name="settings">настройки</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="show_all_tickets">Посмотреть все билеты</string>
    <string name="subscribe_price">Подписка на цену</string>
    <string name="filter">Фильтр</string>
    <string name="price_chart">График цен</string>
    <string name="without_transfers">Без пересадок</string>
    <string name="one_person">1 пасажир</string>
    <string name="end_duration">ч в пути</string>
    <string name="arrival_evening">Прилет вечером</string>
</resources>