<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".presentation.ui.SearchFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/et_container"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_48dp"
        android:background="@color/grey2"
        app:cardCornerRadius="@dimen/_16dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey2"
            android:paddingVertical="@dimen/_8dp"
            android:paddingStart="@dimen/_8dp"
            android:paddingTop="@dimen/_18dp"
            android:paddingEnd="@dimen/_16dp"
            android:paddingBottom="@dimen/_16dp">

            <ImageView
                android:id="@+id/ic_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_back"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/departure"
                style="@style/MainEditTextStyle"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Минск" />

            <ImageView
                android:id="@+id/ic_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_change"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/departure"
                app:layout_constraintEnd_toEndOf="@id/departure"
                app:layout_constraintTop_toTopOf="@id/departure" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/_16dp"
                android:background="@color/grey3"
                android:backgroundTint="@color/grey3"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ic_back"
                app:layout_constraintTop_toBottomOf="@id/departure" />

            <EditText
                android:id="@+id/arrival"
                style="@style/MainEditTextStyle"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:focusable="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/divider"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Сочи" />

            <ImageView
                android:id="@+id/ic_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_close"
                android:backgroundTint="@color/white"
                app:layout_constraintBottom_toBottomOf="@id/arrival"
                app:layout_constraintEnd_toEndOf="@id/arrival"
                app:layout_constraintTop_toTopOf="@id/arrival" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/settings_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/et_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/container_back_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:background="@color/grey2"
                app:cardCornerRadius="@dimen/_50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/grey2"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_4dp"
                    android:paddingVertical="@dimen/_8dp">

                    <ImageView
                        android:id="@+id/back_data_icon"
                        android:layout_width="@dimen/_16dp"
                        android:layout_height="@dimen/_16dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_8dp"
                        android:backgroundTint="@color/white"
                        android:src="@drawable/ic_plus" />

                    <TextView
                        android:id="@+id/back_data_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:paddingBottom="@dimen/_2dp"
                        android:text="@string/back"
                        android:textColor="@color/white"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_14sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_there_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:background="@color/grey2"
                app:cardCornerRadius="@dimen/_50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/grey2"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_10dp"
                    android:paddingVertical="@dimen/_8dp">

                    <TextView
                        android:id="@+id/there_day_mon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:textColor="@color/white"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_14sp"
                        tools:text="24 фев" />

                    <TextView
                        android:id="@+id/there_day_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:textColor="@color/grey6"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_14sp"
                        tools:text=", сб" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8dp"
                android:background="@color/grey2"
                app:cardCornerRadius="@dimen/_50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/grey2"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_10dp"
                    android:paddingVertical="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_16dp"
                        android:layout_height="@dimen/_16dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_8dp"
                        android:backgroundTint="@color/grey5"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:id="@+id/ticket_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:paddingBottom="@dimen/_2dp"
                        android:text="@string/type_text"
                        android:textColor="@color/white"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_14sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/container_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16dp"
                android:background="@color/grey2"
                app:cardCornerRadius="@dimen/_50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@color/grey2"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/_10dp"
                    android:paddingVertical="@dimen/_8dp">

                    <ImageView
                        android:layout_width="@dimen/_16dp"
                        android:layout_height="@dimen/_16dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="@dimen/_8dp"
                        android:backgroundTint="@color/white"
                        android:src="@drawable/ic_settings" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/sf_pro_display_regular"
                        android:lines="1"
                        android:paddingBottom="@dimen/_2dp"
                        android:text="@string/settings"
                        android:textColor="@color/white"
                        android:textFontWeight="400"
                        android:textSize="@dimen/_14sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_68dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/grey7"
        android:textFontWeight="600"
        android:textSize="@dimen/_22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/container_show_tickets"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/settings_container" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_68dp"
        app:layout_constraintBottom_toTopOf="@id/container_show_tickets"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/settings_container" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container_tickets"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12dp"
        app:cardBackgroundColor="@color/grey1"
        app:cardCornerRadius="@dimen/_16dp"
        app:layout_constraintBottom_toTopOf="@id/container_show_tickets"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/settings_container">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/direct_flights"
                android:textColor="@color/white"
                android:textFontWeight="600"
                android:textSize="@dimen/_20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tickets"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8dp"
                android:background="@color/grey1"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container_show_tickets"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12dp"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/container_tickets">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_10dp"
            android:fontFamily="@font/sf_pro_display_regular"
            android:text="@string/show_all_tickets"
            android:textColor="@color/white"
            android:textStyle="italic" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/container_subscribe_price"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginBottom="@dimen/_40dp"
        app:cardBackgroundColor="@color/grey0"
        app:cardCornerRadius="@dimen/_8dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/container_show_tickets">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_14dp"
                android:layout_marginEnd="@dimen/_8dp"
                android:layout_marginBottom="@dimen/_14dp"
                android:background="@drawable/ic_bell"
                android:backgroundTint="@color/blue" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_8dp"
                android:background="@color/grey0"
                android:enabled="false"
                android:fontFamily="@font/sf_pro_display_regular"
                android:switchPadding="120dp"
                android:text="@string/subscribe_price"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textFontWeight="400"
                android:textSize="@dimen/_16sp"
                android:trackTint="@color/grey7"
                app:thumbIconTint="@color/blue"
                app:thumbIconTintMode="multiply"
                app:trackDecoration="@color/blue" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>